[package]
name = "nostd-print"
version = "0.1.0"
edition = "2024"

[features]
default = []
alloc = []

[target.'cfg(unix)'.dependencies]
libc = {version = "0.2.175", default-features = false}

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_System_Console",
]
