[package]
name = "nostd-print"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jardynq/nostd-print-rs"
documentation = "https://docs.rs/nostd-print"
readme = "README.md"
keywords = ["nostd", "print", "stdout", "stderr", "stdin", "windows", "unix", "linux", "mac"]
categories = ["nostd"]
description = "#[no_std] print for Rust on Windows and Unix systems"

[features]
default = []
alloc = []

[target.'cfg(unix)'.dependencies]
libc = {version = "0.2.175", default-features = false}

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_System_Console",
]
